# docs/api.yml
@@ -1,7 +1,7 @@
-openapi: 3.0.0
+openapi: 3.0.1
 info:
   title: Vault Catalog Service API
-  version: 1.0.0
+  version: 2.0.0
   description: |
     This document specifies the Vault Catalog Service API. It provides relational metadata about items in the vault catalog.
     This API implements the operations ...
@@ -35,6 +35,7 @@ paths:
     get:
       tags:
         - ocflObjectVersion
+      operationId: getOcflObjectsByBagId
       parameters:
         - name: bagId
           in: path
@@ -55,6 +56,7 @@ paths:
     get:
       tags:
         - ocflObjectVersion
+      operationId: getOcflObjectsBySwordToken
       parameters:
         - name: swordToken
           in: path
@@ -75,6 +77,7 @@ paths:
     get:
       tags:
         - ocflObjectVersion
+      operationId: getOcflObjectByBagIdAndVersionNumber
       parameters:
         - name: bagId
           in: path
@@ -85,7 +88,7 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
       responses:
         200:
           description: Single OCFL Object Version
@@ -97,6 +100,7 @@ paths:
     put:
       tags:
         - ocflObjectVersion
+      operationId: createOcflObjectVersion
       summary: PUT a new OCFL Object to the Catalog, or extend an existing one
       description: |
       requestBody:
@@ -107,7 +111,7 @@ paths:
           application/json:
             schema:
               oneOf:
-                - $ref: "#/components/schemas/OcflObjectVersion"
+                - $ref: "#/components/schemas/OcflObjectVersionParameters"
       parameters:
         - name: bagId
           in: path
@@ -118,11 +122,15 @@ paths:
           in: path
           required: true
           schema:
-            type: string
+            type: integer
 
       responses:
         201:
           description: The object has been created
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/OcflObjectVersion'
         400:
           description: The OcflObject was syntactically incorrect, for instance not all required fields were provided.
         401:
@@ -141,7 +149,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Tar'
+              $ref: '#/components/schemas/TarParameter'
         required: true
       responses:
         default:
@@ -185,7 +193,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Tar'
+              $ref: '#/components/schemas/TarParameter'
         required: true
       responses:
         default:
@@ -214,9 +222,9 @@ components:
       example:
         vaultPath: theVault
         tarUuid: e102df56-14ca-48a6-a74a-0fc1ae1c14de
-        archivalDate:  2023-05-02T18:56:51.582Z
-        tarParts: ["part01", "part02"]
-        ocflObjectVersions: []
+        archivalDate: 2023-05-02T18:56:51.582Z
+        tarParts: [ "part01", "part02" ]
+        ocflObjectVersions: [ ]
       properties:
         vaultPath:
           type: string
@@ -234,6 +242,37 @@ components:
           items:
             $ref: '#/components/schemas/OcflObjectVersion'
 
+    TarParameter:
+      type: object
+      required:
+        - tarUuid
+        - vaultPath
+        - archivalDate
+        - tarParts
+        - ocflObjectVersions
+      example:
+        vaultPath: theVault
+        tarUuid: e102df56-14ca-48a6-a74a-0fc1ae1c14de
+        archivalDate: 2023-05-02T18:56:51.582Z
+        tarParts: [ "part01", "part02" ]
+        ocflObjectVersions: [ ]
+      properties:
+        vaultPath:
+          type: string
+        tarUuid:
+          type: string
+        archivalDate:
+          type: string
+          format: date-time
+        tarParts:
+          type: array
+          items:
+            $ref: '#/components/schemas/TarPartParameter'
+        ocflObjectVersions:
+          type: array
+          items:
+            $ref: '#/components/schemas/OcflObjectVersionRef'
+
     TarPart:
       type: object
       example:
@@ -250,6 +289,25 @@ components:
         partName:
           type: string
         tarUuid:
+          type: string
+          readOnly: true
+        checksumAlgorithm:
+          type: string
+        checksumValue:
+          type: string
+
+    TarPartParameter:
+      type: object
+      example:
+        partName: part01
+        checksumAlgorithm: BLAKE-256
+        checksumValue: 716f6e863f744b9ac22c97ec7b76ea5f5908bc5b2f67c61510bfc4751384ea7a
+      required:
+        - partName
+        - checksumAlgorithm
+        - checkumValue
+      properties:
+        partName:
           type: string
         checksumAlgorithm:
           type: string
@@ -310,3 +368,63 @@ components:
         exportTimestamp:
           type: string
           format: date-time
+
+    OcflObjectVersionParameters:
+      type: object
+      example:
+        nbn: urn:nbn:nl:ui:13-00-1haq
+        swordToken: sword:016526b1-c0ae-4237-854c-1f4d0b84d25a
+        dataSupplier: REPO1
+        tarUuid: e102df56-14ca-48a6-a74a-0fc1ae1c14de
+        ocflObjectPath: 40/59/4b/6d-8378-4260-b96b-13b57beadf7c
+        datastation: DS_Archaeology
+        dataversePid: https://doi.org/10.17026/XXXXX
+        dataversePidVersion: V1.0
+        otherId: REPO1:31998
+        otherIdVersion: 3.2
+        exportTimestamp: 2023-04-09T11:56:58.607Z
+      properties:
+        swordToken:
+          type: string
+          format: UUID
+        nbn:
+          type: string
+          format: "urn"
+        dataSupplier:
+          type: string
+        tarUuid:
+          type: string
+          format: "uuid"
+        dataversePid:
+          type: string
+        dateversePidVersion:
+          type: string
+        otherId:
+          type: string
+        otherIdVersion:
+          type: string
+        ocflObjectPath:
+          type: string
+        metadata:
+          type: object
+          format: "json-ld"
+        filePidToLocalPath:
+          type: string
+        exportTimestamp:
+          type: string
+          format: date-time
+
+    OcflObjectVersionRef:
+      type: object
+      example:
+        bagId: urn:uuid:40594b6d-8378-4260-b96b-13b57beadf7c
+        objectVersion: 1
+      required:
+        - bagId
+        - objectVersion
+      properties:
+        bagId:
+          type: string
+          format: "uuid"
+        objectVersion:
+          type: integer
